mantaining user session

--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -1,5 +1,5 @@
 <h1>Users#spotify</h1>
 
-<%= link_to 'Playlists', '/users/playlists', spotify_user: @spotify_user %>
+<%= link_to 'Playlists', '/users/playlists' %>
 <p>
-<%= link_to 'Party Playlist!', '/users/party', spotify_user: @spotify_user %>
+<%= link_to 'Party Playlist!', '/users/party' %>
