--- a/app/views/users/party.html.erb
+++ b/app/views/users/party.html.erb
@@ -1,5 +1,11 @@
 <% @tracks.each do |track| %>
     <p>
-        <%= "#{track.id} : #{track.name}" %>
+        <%= "#{track.name} - #{track.artists.first.name}  _  #{track.album.name}" %>
     </p>
+<% end %>
+
+<%= form_tag("/search", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
 <% end %>
