routes & controllers fixed

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <% @tracks.each do |track| %>
     <p>
-        <%= button_to "Add", {controller: 'users', action: 'party', track_id: track.id} %>
+        <%= button_to "Add", {controller: 'playlists', action: 'update', track_id: track.id}, method: :put %>
         <%= "#{track.name} - #{track.artists.first.name}  _  #{track.album.name}" %>
     </p>
 <% end %>
