--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,6 +1,6 @@
 <% @tracks.each do |track| %>
     <p>
-        <%= "#{track.name} - #{track.artist}  _  #{track.album}" %>
+        <%= "#{track.name} - #{track.artists.first.name}  _  #{track.album.name}" %>
     </p>
 <% end %>
 
