Any user can access the party playlist by its spotify id    * Need to store owners credentials in DB

--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -1,3 +1,5 @@
+Playlist <%= "#{@spoti_playlist_id}" %>
+
 <% @tracks.each do |track| %>
     <p>
         <%= "#{track.name} - #{track.artists.first.name}  _  #{track.album.name}" %>
