Spotify user and playlist handling:   * spotify user id is saved in DB   * now the spotify playlist has to be chosen by user

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,5 +1,5 @@
 <% @playlists.each do |playlist| %>
     <p>
-        <%= "#{playlist.id} : #{playlist.name}" %>
+        <%= link_to "#{playlist.id} : #{playlist.name}", { controller: :playlists, action: :show, id: playlist.id } %>
     </p>
 <% end %>
