--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-<%= link_to 'Sign in with Spotify', '/auth/spotify' %>
+<p>
+<%= link_to 'Sign in with Spotify', user_omniauth_authorize_path(:spotify) %>
