Added new logic to store the party playlist   * Now the users selects the playlist from a list     * Changed action in view, added it in controller       * Fixed route     * That playlist will be designated to the user (1 to 1 relation in model)   * SpotifyUser interactor fixed: parameters are better handled now in controller

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,5 +1,5 @@
 <% @playlists.each do |playlist| %>
     <p>
-        <%= link_to "#{playlist.id} : #{playlist.name}", { controller: :playlists, action: :show, id: playlist.id } %>
+        <%= link_to "#{playlist.id} : #{playlist.name}", { controller: :playlists, action: :assign_user, spoti_id: playlist.id } %>
     </p>
 <% end %>
