--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -7,6 +7,7 @@ Playlist <%= "#{@spoti_playlist_id}" %>
 <% end %>
 
 <%= form_tag("/search", method: "get") do %>
+  <%= hidden_field_tag :spoti_playlist_id, @spoti_playlist_id %>
   <%= label_tag(:q, "Search for:") %>
   <%= text_field_tag(:q) %>
   <%= submit_tag("Search") %>
